  * pipedmd: fix tracker invocation if the VS2015 version is found through PATH
  * update vsi2d to Windows SDK 10.0.15063.0
  * Visual D now buildable with VS2017
  * dparser:
    - "add import path of project dependencies": implicit import directories not passed to semantic analyzer
    - tooltip for selective imports now show the aliased definition, not the alias
    - improved tooltips: show full qualified name, show initializer for constants,
      better display for enum and aliases
    - fixed completion or tooltips sometimes not working before modifying source code

unreleased Version 0.46.0

  * cv2pdb
    - now also search VS2017 registry entries to find mspdb140.dll
    - fix working with the VS2017 update 15.3.1
  * add workaround for broken TLS when linking with link.exe from VS2017 update 15.3.1
  * improve handling of non-ASCII installation paths:
    - use unicode aware version of NSIS, register through wide string API of rundll32
    - parse sc.ini with current code page
    - pipedmd: pass wide string command line to sub process
    - convert MS linker response file to UTF16
  * build single object file to intermediate directory rather than output folder
  * intermediate executable for cv2pdb now written to intermediate directory
  * custom build batch files now written to intermediate directory
  * dparser:
    - when building with LDC, use import path from its config file instead of DMDs' sc.ini
  * use "if %errorlevel% neq 0" instead of "if errorlevel 1" in batches to capture crashes, too
  * fix default executable search path for LDC assuming a 64-bit compiler executable (avoids 
    linker error -1073741701)
  * added *.tlog to default files to clean
  * fixed spurious freeze in precise GC (mostly during startup)
  * add import library to project outputs if "create import library" enabled
  * added linker options to configure map file, import library and PDB file
  * parse "static foreach" (but no semantic analysis)